base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fayaaz-deployment  # Do not change this in overlays
  labels:
    app: fayaaz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fayaaz
  template:
    metadata:
      labels:
        app: fayaaz
    spec:
      serviceAccountName: fayaaz-app-sa
      containers:
        - name: fayaaz-container
          image: nginx:latest
          ports:
            - containerPort: 80
