base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fayaaz-service
spec:
  selector:
    app: fayaaz
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
